--- a/desktop.ini
+++ b/desktop.ini
@@ -1,6 +1,6 @@
 [.ShellClassInfo]
-IconResource=C:\WINDOWS\System32\SHELL32.dll,238
+IconResource=C:\WINDOWS\System32\SHELL32.dll,223
 [ViewState]
 Mode=
 Vid=
-FolderType=Generic
+FolderType=StorageProviderGeneric
